--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
   },
   "homepage": "https://github.com/mcollina/sermon#readme",
   "devDependencies": {
+    "benchmark": "^2.1.0",
+    "bunyan": "^1.6.0",
+    "fastbench": "^1.0.0",
+    "flush-write-stream": "^1.0.0",
     "pre-commit": "^1.1.2",
     "standard": "^6.0.5",
     "tap": "^5.5.0"
+  },
+  "dependencies": {
+    "split2": "^2.0.1"
   }
 }
