--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "flush-write-stream": "^1.0.0",
     "pre-commit": "^1.1.2",
     "standard": "^6.0.5",
-    "tap": "^5.5.0"
+    "tap": "^5.5.0",
+    "winston": "^2.1.1"
   },
   "dependencies": {
     "core-util-is": "^1.0.2",
