--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pino",
   "version": "0.2.2",
-  "description": "your logger, inspired by bunyan",
+  "description": "fast and simple logger",
   "main": "pino.js",
   "bin": {
     "pino": "./bin.js"
