--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pino",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "fast and simple logger",
   "main": "pino.js",
   "bin": {
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/mcollina/pino.git"
   },
   "keywords": [
+    "fast",
     "logger",
     "stream"
   ],
