--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
   "dependencies": {
     "chalk": "^1.1.1",
     "core-util-is": "^1.0.2",
-    "fast-json-parse": "^1.0.0",
-    "json-stringify-safe": "^5.0.1",
-    "quick-format": "^1.0.0",
+    "fast-safe-stringify": "^1.0.4",
+    "quick-format": "^2.0.0",
     "split2": "^2.0.1"
   }
 }
