--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "type": "git",
     "url": "git+https://github.com/mcollina/pino.git"
   },
+  "standard": {
+    "ignore": [
+      "flatten-string.js"
+    ]
+  },
   "keywords": [
     "fast",
     "logger",
