--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.1.7",
   "description": "fast and simple logger",
   "main": "pino.js",
+  "browser": {
+    "./pretty.js": "./noop.js"
+  },
   "bin": {
     "pino": "./pretty.js"
   },
