--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pino": "./pretty.js"
   },
   "scripts": {
-    "test": "standard && tap test/*test.js",
+    "test": "standard && tap --no-cov test/*test.js",
     "ci": "standard && tap --cov test/*test.js"
   },
   "precommit": "test",
