--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "flatstr": "^1.0.0",
     "once": "^1.3.3",
     "quick-format": "^2.0.4",
-    "split2": "^2.0.1"
+    "split2": "^2.0.1",
+    "xtend": "^4.0.1"
   }
 }
