--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "fast-json-parse": "^1.0.0",
     "fast-safe-stringify": "^1.0.8",
     "flatstr": "^1.0.0",
+    "object.assign": "^4.0.4",
     "once": "^1.3.3",
     "quick-format": "^2.0.4",
-    "split2": "^2.0.1",
-    "xtend": "^4.0.1"
+    "split2": "^2.0.1"
   }
 }
