--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "2.13.2",
   "description": "super fast, all natural json logger",
   "main": "pino.js",
-  "browser": {
-    "./pretty.js": "./noop.js"
-  },
+  "browser": "./browser.js",
   "bin": {
     "pino": "./pretty.js"
   },
   "scripts": {
+    "browser-test": "zuul tape test/browser.test.js --local",
     "test": "standard && tap --no-cov test/*test.js",
     "ci": "standard && tap --cov test/*test.js"
   },
@@ -37,12 +36,15 @@
     "debug": "^2.2.0",
     "fastbench": "^1.0.0",
     "flush-write-stream": "^1.0.0",
+    "fresh-require": "^1.0.3",
     "log": "^1.4.0",
     "loglevel": "^1.4.0",
     "pre-commit": "^1.1.2",
     "standard": "^8.0.0",
     "tap": "^7.0.0",
-    "winston": "^2.1.1"
+    "tape": "^4.6.2",
+    "winston": "^2.1.1",
+    "zuul": "^3.11.1"
   },
   "dependencies": {
     "chalk": "^1.1.1",
