--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "scripts": {
     "browser-test": "zuul tape test/browser.test.js --local",
     "test": "standard && tap --no-cov test/*test.js",
-    "ci": "standard && tap --cov test/*test.js"
+    "ci": "standard && tap --cov test/*test.js",
+    "bench-all": "node benchmarks/runbench all",
+    "bench-basic": "node benchmarks/runbench basic",
+    "bench-object": "node benchmarks/runbench object",
+    "bench-deepobject": "node benchmarks/runbench deepobject",
+    "bench-multiarg": "node benchmarks/runbench multiarg",
+    "bench-child": "node benchmarks/runbench child",
+    "bench-grandchild": "node benchmarks/runbench grandchild",
+    "bench-conception": "node benchmarks/runbench conception"
   },
   "precommit": "test",
   "repository": {
@@ -40,9 +48,12 @@
     "log": "^1.4.0",
     "loglevel": "^1.4.0",
     "pre-commit": "^1.1.2",
+    "pump": "^1.0.1",
     "standard": "^8.0.0",
+    "steed": "^1.1.3",
     "tap": "^7.0.0",
     "tape": "^4.6.2",
+    "through2": "^2.0.1",
     "winston": "^2.1.1",
     "zuul": "^3.11.1"
   },
