Use pagkage.files section instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "bin": {
     "pino": "./pretty.js"
   },
+  "files" : [
+    "pino.js", 
+    "browser.js",
+    "pretty.js",
+    "LICENEE",
+    "usage.txt"
+  ],
   "scripts": {
     "browser-test": "zuul tape test/browser.test.js --local",
     "test": "standard && tap --no-cov test/*test.js",
