include example.js file and test folder

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "pretty.js",
     "LICENEE",
     "usage.txt",
-    "tests",
-    "examples.js"
+    "test",
+    "example.js"
   ],
   "scripts": {
     "browser-test": "zuul tape test/browser.test.js --local",
