Add Thomas Watson as contributor

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "author": "Matteo Collina <hello@matteocollina.com>",
   "contributors": [
     "David Mark Clements <huperekchuno@googlemail.com>",
-    "James Sumners <james.sumners@gmail.com>"
+    "James Sumners <james.sumners@gmail.com>",
+    "Thomas Watson Steen <w@tson.dk> (https://twitter.com/wa7son)"
   ],
   "license": "MIT",
   "bugs": {
