--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "fast-safe-stringify": "^1.1.3",
     "flatstr": "^1.0.4",
     "once": "^1.3.3",
+    "pump": "^1.0.2",
     "quick-format-unescaped": "^1.0.0",
     "split2": "^2.0.1"
   }
