--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "flatstr": "^1.0.4",
     "pump": "^1.0.2",
     "quick-format-unescaped": "^1.0.0",
-    "split2": "^2.0.1"
+    "split2": "^2.0.1",
+    "stacktrace-js": "^1.3.1"
   }
 }
