separate CLI features for `pretty.js` (bin.js) with default features (pretty.js), to be able to use webpack with Node.js code in AWS Lambda environments

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "pino.js",
   "browser": "./browser.js",
   "bin": {
-    "pino": "./pretty.js"
+    "pino": "./bin.js"
   },
   "files": [
     "pino.js",
