--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   ],
   "scripts": {
     "browser-test": "zuul tape test/browser.test.js --local",
-    "test": "standard && tap --no-cov test/*test.js",
-    "ci": "standard && tap --cov test/*test.js",
+    "test": "standard | snazzy && tap --no-cov test/*test.js",
+    "ci": "standard | snazzy && tap --cov test/*test.js",
     "bench-all": "node benchmarks/runbench all",
     "bench-basic": "node benchmarks/runbench basic",
     "bench-object": "node benchmarks/runbench object",
@@ -65,7 +65,8 @@
     "loglevel": "^1.4.0",
     "pre-commit": "^1.2.2",
     "pump": "^1.0.1",
-    "standard": "^8.6.0",
+    "snazzy": "^6.0.0",
+    "standard": "^9.0.0",
     "steed": "^1.1.3",
     "tap": "^10.0.0",
     "tape": "^4.6.2",
