--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "tap": "^11.1.3",
     "tape": "^4.9.0",
     "through2": "^2.0.3",
-    "winston": "^2.4.1",
+    "winston": "^3.0.0-rc3",
     "zuul": "^3.11.1"
   },
   "dependencies": {
