--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.0.1",
     "snazzy": "^7.1.1",
+    "split2": "^2.2.0",
     "standard": "^11.0.1",
     "steed": "^1.1.3",
     "tap": "^11.1.3",
@@ -82,7 +83,6 @@
     "flatstr": "^1.0.5",
     "pino-std-serializers": "^2.0.0",
     "pump": "^3.0.0",
-    "quick-format-unescaped": "^1.1.2",
-    "split2": "^2.2.0"
+    "quick-format-unescaped": "^1.1.2"
   }
 }
