--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "super fast, all natural json logger",
   "main": "pino.js",
   "browser": "./browser.js",
-  "bin": {
-    "pino": "./bin.js"
-  },
   "files": [
     "pino.js",
     "bin.js",
@@ -31,6 +28,9 @@
     "bench-child": "node benchmarks/runbench child",
     "bench-grandchild": "node benchmarks/runbench grandchild",
     "bench-conception": "node benchmarks/runbench conception"
+  },
+  "bin": {
+    "pino": "./bin.js"
   },
   "precommit": "test",
   "repository": {
@@ -64,9 +64,11 @@
     "fresh-require": "^1.0.3",
     "log": "^1.4.0",
     "loglevel": "^1.6.1",
+    "pino-pretty": "^1.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.0.1",
     "snazzy": "^7.1.1",
+    "split2": "^2.2.0",
     "standard": "^11.0.1",
     "steed": "^1.1.3",
     "tap": "^11.1.3",
@@ -76,13 +78,11 @@
     "zuul": "^3.11.1"
   },
   "dependencies": {
-    "chalk": "^2.3.2",
     "fast-json-parse": "^1.0.3",
     "fast-safe-stringify": "^1.2.3",
     "flatstr": "^1.0.5",
     "pino-std-serializers": "^2.0.0",
     "pump": "^3.0.0",
-    "quick-format-unescaped": "^1.1.2",
-    "split2": "^2.2.0"
+    "quick-format-unescaped": "^1.1.2"
   }
 }
