--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "flatstr": "^1.0.5",
     "pino-std-serializers": "^2.0.0",
     "pump": "^3.0.0",
-    "quick-format-unescaped": "^1.1.2"
+    "quick-format-unescaped": "^1.1.2",
+    "sonic-boom": "^0.1.0"
   }
 }
