--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pino",
-  "version": "4.16.1",
+  "version": "5.0.0-rc.1",
   "description": "super fast, all natural json logger",
   "main": "pino.js",
   "browser": "./browser.js",
