--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lib"
   ],
   "scripts": {
-    "browser-test": "zuul tape test/browser*test.js --local",
+    "browser-test": "airtap --local 8080 test/browser*test.js",
     "test": "standard | snazzy && NODE_OPTIONS='--no-warnings' tap --no-cov test/*test.js",
     "ci": "standard | snazzy &&  NODE_OPTIONS='--no-warnings' tap --cov test/*test.js",
     "bench-all": "node benchmarks/runbench all",
@@ -55,6 +55,7 @@
   },
   "homepage": "http://getpino.io",
   "devDependencies": {
+    "airtap": "0.0.7",
     "benchmark": "^2.1.4",
     "bole": "^3.0.2",
     "bunyan": "^1.8.12",
@@ -69,14 +70,13 @@
     "snazzy": "^7.1.1",
     "standard": "^11.0.1",
     "steed": "^1.1.3",
-    "tap": "^11.1.3",
+    "tap": "^11.1.5",
     "tape": "^4.9.0",
     "through2": "^2.0.3",
-    "winston": "^3.0.0-rc3",
-    "zuul": "^3.11.1"
+    "winston": "^3.0.0-rc5"
   },
   "dependencies": {
-    "chalk": "^2.3.2",
+    "chalk": "^2.4.1",
     "fast-json-parse": "^1.0.3",
     "fast-safe-stringify": "^1.2.3",
     "flatstr": "^1.0.5",
