--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "tap": "^11.1.5",
     "tape": "^4.9.0",
     "through2": "^2.0.3",
-    "winston": "^3.0.0-rc5"
+    "winston": "^3.0.0"
   },
   "dependencies": {
     "fast-json-parse": "^1.0.3",
