--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bole": "^3.0.2",
     "bunyan": "^1.8.12",
     "docsify-cli": "^4.2.1",
+    "execa": "^1.0.0",
     "fastbench": "^1.0.1",
     "flush-write-stream": "^1.0.3",
     "fresh-require": "^1.0.3",
