Move boom to dev deps. Removed fast-json-parse

--- a/package.json
+++ b/package.json
@@ -80,15 +80,14 @@
     "tap": "^12.1.0",
     "tape": "^4.9.0",
     "through2": "^3.0.0",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "pump": "^3.0.0"
   },
   "dependencies": {
-    "fast-json-parse": "^1.0.3",
     "fast-redact": "^1.4.2",
     "fast-safe-stringify": "^2.0.6",
     "flatstr": "^1.0.9",
     "pino-std-serializers": "^2.3.0",
-    "pump": "^3.0.0",
     "quick-format-unescaped": "^3.0.0",
     "sonic-boom": "^0.7.1"
   }
