--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "split2": "^3.0.0",
     "standard": "^12.0.1",
     "steed": "^1.1.3",
-    "tap": "^12.1.0",
+    "tap": "12.1.0",
     "tape": "^4.9.0",
     "through2": "^3.0.0",
     "winston": "^3.1.0"
