--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "test": "standard | snazzy && NODE_OPTIONS='--no-warnings -r qodaa' tap -j 4 --no-cov test/*test.js",
-    "ci": "standard | snazzy && TAP_TIMEOUT=480000 NODE_OPTIONS='--no-warnings -r qodaa' tap -j 4 --100 test/*test.js",
-    "cov-ui": "NODE_OPTIONS='--no-warnings -r qodaa' tap -j 4 --coverage-report=html test/*test.js",
+    "test": "standard | snazzy && NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --no-cov test/*test.js",
+    "ci": "standard | snazzy && TAP_TIMEOUT=480000 NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --100 test/*test.js",
+    "cov-ui": "NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --coverage-report=html test/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
@@ -65,30 +65,30 @@
     "docsify-cli": "^4.2.1",
     "execa": "^1.0.0",
     "fastbench": "^1.0.1",
-    "flush-write-stream": "^1.0.3",
+    "flush-write-stream": "^1.1.1",
     "fresh-require": "^1.0.3",
     "log": "^3.0.0",
     "loglevel": "^1.6.1",
     "pino-pretty": "^2.4.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.0",
+    "pump": "^3.0.0",
     "qodaa": "^1.0.1",
     "snazzy": "^8.0.0",
-    "split2": "^3.0.0",
+    "split2": "^3.1.1",
     "standard": "^12.0.1",
     "steed": "^1.1.3",
-    "tap": "^12.1.0",
-    "tape": "^4.9.0",
-    "through2": "^3.0.0",
-    "winston": "^3.1.0",
-    "pump": "^3.0.0"
+    "tap": "^12.6.0",
+    "tape": "^4.10.1",
+    "through2": "^3.0.1",
+    "winston": "^3.2.1"
   },
   "dependencies": {
-    "fast-redact": "^1.4.2",
+    "fast-redact": "^1.4.4",
     "fast-safe-stringify": "^2.0.6",
     "flatstr": "^1.0.9",
     "pino-std-serializers": "^2.3.0",
-    "quick-format-unescaped": "^3.0.0",
-    "sonic-boom": "^0.7.1"
+    "quick-format-unescaped": "^3.0.2",
+    "sonic-boom": "^0.7.3"
   }
 }
