Replace obsolete dependency with an up-to-date one. Fix Windows support

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "test": "standard | snazzy && NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --no-cov test/*test.js",
-    "ci": "standard | snazzy && TAP_TIMEOUT=480000 NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --100 test/*test.js",
-    "cov-ui": "NODE_OPTIONS='--no-warnings -r qodaa' tap --no-esm -j 4 --coverage-report=html test/*test.js",
+    "test": "standard | snazzy && cross-env NODE_OPTIONS=\"--no-warnings -r qodaa\" tap --no-esm -j 4 --no-cov test/*test.js",
+    "ci": "standard | snazzy && cross-env TAP_TIMEOUT=480000 NODE_OPTIONS=\"--no-warnings -r qodaa\" tap --no-esm -j 4 --100 test/*test.js",
+    "cov-ui": "cross-env NODE_OPTIONS=\"--no-warnings -r qodaa\" tap --no-esm -j 4 --coverage-report=html test/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
@@ -62,11 +62,12 @@
     "benchmark": "^2.1.4",
     "bole": "^3.0.2",
     "bunyan": "^1.8.12",
+    "cross-env": "^5.2.0",
     "docsify-cli": "^4.2.1",
     "execa": "^1.0.0",
     "fastbench": "^1.0.1",
     "flush-write-stream": "^2.0.0",
-    "fresh-require": "^1.0.3",
+    "import-fresh": "^3.0.0",
     "log": "^5.0.0",
     "loglevel": "^1.6.1",
     "pino-pretty": "^2.4.0",
