fix(deps): pino-pretty should be an optional peer
This fixes https://github.com/pnpm/pnpm/issues/1791

pnpm and yarn are not printing warnings if optional peers are not found.
The next version of npm will also support optional peer deps.

--- a/package.json
+++ b/package.json
@@ -91,5 +91,13 @@
     "pino-std-serializers": "^2.3.0",
     "quick-format-unescaped": "^3.0.2",
     "sonic-boom": "^0.7.5"
+  },
+  "peerDependencies": {
+    "pino-pretty": "^2.4.0"
+  },
+  "peerDependenciesMeta": {
+    "pino-pretty": {
+      "optional": true
+    }
   }
 }
