--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macOS-10.14, windows-latest, ubuntu-latest]
+        os: [macOS-latest, windows-latest, ubuntu-latest]
         node-version: [6, 8, 10, 11, 12, 13]
     steps:
       - uses: actions/checkout@v1
