--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "test": "standard | snazzy && tap --no-ts --no-jsx --no-esm -J --no-cov test/*test.js",
-    "ci": "standard | snazzy && TAP_TIMEOUT=480000 tap --timeout 480 --no-jsx --no-ts --no-esm --100 test/*test.js",
-    "cov-ci": "tap --no-jsx --no-ts --no-esm -t 480 --100 --coverage-report=lcov test/*test.js",
-    "cov-ui": "tap -t 480 --no-jsx --no-ts --no-esm --coverage-report=html test/*test.js",
+    "test": "standard | snazzy && tap -J --no-cov test/*test.js",
+    "ci": "standard | snazzy && tap --100 test/*test.js",
+    "cov-ci": "tap --100 --coverage-report=lcov test/*test.js",
+    "cov-ui": "tap --coverage-report=html test/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
