--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: npm i
-      - name: Test
-        run: |
-              if [ "$RUNNER_OS" == "Windows ]; then
-                npm run without-cov
-              elseif
-                npm test
-              fi
+      - name: Test with coverage
+        if: matrix.os != 'windows-latest'
+        run: npm test
+      - name: Test without coverage
+        if: matrix.os == 'windows-latest'
+        run: npm test
