Disable code coverage on Windows (#839)
Currently we fail on Windows and node v14 for some issue it is hard to track.
Disabling coverage for now, to be revisited

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: npm i
-      - name: Tests
+      - name: Test with coverage
+        if: matrix.os != 'windows-latest'
         run: npm test
+      - name: Test without coverage
+        if: matrix.os == 'windows-latest'
+        run: npm run without-cov
