Revert "Disable code coverage on Windows (#839)"
This reverts commit 417d0165998c62d9faceef659d8b55ad0ec60a84.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: npm i
-      - name: Test with coverage
-        if: matrix.os != 'windows-latest'
+      - name: Tests
         run: npm test
-      - name: Test without coverage
-        if: matrix.os == 'windows-latest'
-        run: npm run without-cov
