--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "6.6.1",
   "description": "super fast, all natural json logger",
   "main": "pino.js",
+  "type": "commonjs",
+  "types": "pino.d.ts",
   "browser": "./browser.js",
   "files": [
     "pino.js",
+    "pino.d.ts",
     "bin.js",
     "browser.js",
     "pretty.js",
@@ -18,7 +21,8 @@
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "test": "standard | snazzy && tap --100 test/*test.js",
+    "test": "npm run test:types && standard | snazzy && tap --100 test/*test.js",
+    "test:types": "tsc && tsd",
     "cov-ui": "tap --coverage-report=html test/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
@@ -58,6 +62,8 @@
   },
   "homepage": "http://getpino.io",
   "devDependencies": {
+    "@types/node": "^14.11.1",
+    "@types/pino-std-serializers": "^2.4.1",
     "airtap": "3.0.0",
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
@@ -81,6 +87,8 @@
     "strip-ansi": "^6.0.0",
     "tap": "^14.10.8",
     "tape": "^5.0.0",
+    "tsd": "^0.13.1",
+    "typescript": "^4.0.3",
     "through2": "^4.0.0",
     "winston": "^3.3.3"
   },
@@ -91,5 +99,8 @@
     "pino-std-serializers": "^2.4.2",
     "quick-format-unescaped": "^4.0.1",
     "sonic-boom": "^1.0.2"
+  },
+  "tsd": {
+    "directory": "test/types"
   }
 }
