--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "pump": "^3.0.0",
     "semver": "^7.0.0",
     "snazzy": "^8.0.0",
+    "sonic-boom": "^1.3.0",
     "split2": "^3.1.1",
     "standard": "^14.3.3",
     "steed": "^1.1.3",
@@ -89,7 +90,7 @@
     "fast-safe-stringify": "^2.0.7",
     "flatstr": "^1.0.12",
     "pino-std-serializers": "^2.4.2",
-    "quick-format-unescaped": "^4.0.1",
-    "sonic-boom": "^1.0.2"
+    "pinole": "0.0.0",
+    "quick-format-unescaped": "^4.0.1"
   }
 }
