--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "test": "standard | snazzy && tap --100 test/*test.js test/*/*test.js",
+    "lint": "eslint . --config=eslintrc.json",
+    "test": "npm run lint && tap --100 test/*test.js test/*/*test.js",
     "cov-ui": "tap --coverage-report=html test/*test.js test/*/*test.js",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
@@ -63,6 +64,11 @@
     "bole": "^4.0.0",
     "bunyan": "^1.8.14",
     "docsify-cli": "^4.4.1",
+    "eslint": "^7.17.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "execa": "^4.0.0",
     "fastbench": "^1.0.1",
     "flush-write-stream": "^2.0.0",
@@ -74,9 +80,7 @@
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
     "semver": "^7.0.0",
-    "snazzy": "^8.0.0",
     "split2": "^3.1.1",
-    "standard": "^16.0.3",
     "steed": "^1.1.3",
     "strip-ansi": "^6.0.0",
     "tap": "^14.10.8",
