--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 name: CI
 on:
-    push:
-        paths-ignore:
-            - "docs/**"
-            - "*.md"
-    pull_request:
-        paths-ignore:
-            - "docs/**"
-            - "*.md"
+  push:
+      paths-ignore:
+          - "docs/**"
+          - "*.md"
+  pull_request:
+      paths-ignore:
+          - "docs/**"
+          - "*.md"
 jobs:
   test:
     name: ${{ matrix.node-version }} ${{ matrix.os }}
@@ -26,7 +26,7 @@ jobs:
       - name: Install
         run: npm i
       - name: Tests
-        run: npm test-ci
+        run: npm run test-ci
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@v1.1.2
         with:
@@ -43,3 +43,12 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
+
+  automerge:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v1.1.1
+        if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
+        with:
+          github-token: ${{secrets.github_token}}
