--- a/package.json
+++ b/package.json
@@ -93,8 +93,10 @@
     "fast-redact": "^3.0.0",
     "fast-safe-stringify": "^2.0.7",
     "flatstr": "^1.0.12",
+    "get-caller-file": "^2.0.5",
     "pino-std-serializers": "^3.1.0",
     "quick-format-unescaped": "^4.0.3",
-    "sonic-boom": "^1.0.2"
+    "sonic-boom": "^1.0.2",
+    "thread-stream": "^0.7.1"
   }
 }
