--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "fast-safe-stringify": "^2.0.7",
     "flatstr": "^1.0.12",
     "get-caller-file": "^2.0.5",
+    "pino-abstract-transport": "^0.1.0",
     "pino-std-serializers": "^3.1.0",
     "quick-format-unescaped": "^4.0.3",
     "sonic-boom": "^1.0.2",
