--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI
 on:
   push:
     paths-ignore:
-        - "docs/**"
-        - "*.md"
+        - 'docs/**'
+        - '*.md'
   pull_request:
     paths-ignore:
-        - "docs/**"
-        - "*.md"
+        - 'docs/**'
+        - '*.md'
 jobs:
   test:
     name: ${{ matrix.node-version }} ${{ matrix.os }}
