ci(benchmarks): ignore documentation updates

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,7 +1,13 @@
 name: Benchmarks
 on:
-  - push
-  - pull_request
+  push:
+    paths-ignore:
+        - 'docs/**'
+        - '*.md'
+  pull_request:
+    paths-ignore:
+        - 'docs/**'
+        - '*.md'
 
 jobs:
   benchmark_current:
