--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,12 @@ name: CI
 on:
   push:
     paths-ignore:
-        - "docs/**"
-        - "*.md"
+        - 'docs/**'
+        - '*.md'
   pull_request:
     paths-ignore:
-        - "docs/**"
-        - "*.md"
+        - 'docs/**'
+        - '*.md'
 jobs:
   test:
     name: ${{ matrix.node-version }} ${{ matrix.os }}
@@ -49,6 +49,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: fastify/github-action-merge-dependabot@v2.0.0
-        if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
         with:
-          github-token: ${{secrets.github_token}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
