--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,9 @@ jobs:
       - uses: fastify/github-action-merge-dependabot@v2.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          exclude: [
+            'sonic-boom',
+            'pino-std-serializers',
+            'quick-format-unescaped',
+            'fast-redact'
+          ]
