Document multistream Move type tests to the end

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "test": "npm run test:types && npm run lint && tap --100 test/*test.js test/*/*test.js",
+    "test": "npm run lint && tap --100 test/*test.js test/*/*test.js && npm run test:types",
     "test-ci": "npm run lint && tap test/*test.js test/*/*test.js --coverage-report=lcovonly",
     "test-types": "tsc && tsd",
     "cov-ui": "tap --coverage-report=html test/*test.js test/*/*test.js",
