--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "fast-redact": "^3.0.0",
     "fast-safe-stringify": "^2.0.7",
     "get-caller-file": "^2.0.5",
+    "on-exit-leak-free": "^0.1.0",
     "pino-abstract-transport": "^0.2.0",
     "pino-std-serializers": "^4.0.0",
     "quick-format-unescaped": "^4.0.3",
