--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lint": "eslint .",
     "test": "npm run lint && tap test/*test.js test/*/*test.js && npm run test-types",
     "test-ci": "npm run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly && npm run test-types",
-    "test-ci-pnpm": "npm run lint && tap --no-coverage --no-check-coverage test/*test.js test/*/*test.js && npm run test-types",
-    "test-ci-yarn-pnp": "npm run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly",
+    "test-ci-pnpm": "pnpm run lint && tap --no-coverage --no-check-coverage test/*test.js test/*/*test.js && pnpm run test-types",
+    "test-ci-yarn-pnp": "yarn run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
     "cov-ui": "tap --coverage-report=html test/*test.js test/*/*test.js",
     "bench": "node benchmarks/utils/runbench all",
@@ -83,7 +83,6 @@
     "import-fresh": "^3.2.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "pino-elasticsearch": "^6.1.0",
     "pino-pretty": "pinojs/pino-pretty#master",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
